--- a/index.html
+++ b/index.html
@@ -2,11 +2,175 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Дизайн-студия Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  <header>
+  <nav>
+    <a>
+      <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
+    </a>
+    <ul>
+      <li><a href="blank.html">Студия</a></li>
+      <li><a href="blank.html">Клиенты</a></li>
+      <li><a href="catalog.html">Магазин</a></li>
+      <li><a href="blank.html">Контакты</a></li>
+    </ul>
+    <a href="blank.html">Корзина</a>
+  </nav>
+  </header>
+  <main>
+    <h1>Дизайн-студия Нёрдс</h1>
+    <section>
+      <h2>Карусель слайдов</h2>
+      <div>
+        <div>
+          <p>Долго, дорого, <br>скрупулезно.</p>
+          <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+          <a href="blank.html">Узнать больше</a>
+        </div>
+        <div>
+          <img src="img/nerds-index-slide1.png" width="760" height="431" alt="Слайд 1">
+        </div>
+      </div>
+      <div>
+        <div>
+          <p>Долго, дорого, <br>скрупулезно.</p>
+          <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+          <a href="blank.html">Узнать больше</a>
+        </div>
+        <div>
+          <img src="img/nerds-index-slide2.png" width="760" height="431" alt="Слайд 2">
+        </div>
+      </div>
+      <div>
+        <div>
+          <p>Долго, дорого, <br>скрупулезно.</p>
+          <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+          <a href="blank.html">Узнать больше</a>
+        </div>
+        <div>
+          <img src="img/nerds-index-slide3.png" width="760" height="431" alt="Слайд 3">
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>Наши услуги</h2>
+      <ul>
+        <li>
+          <img src="img/illustration-1.png" width="300" height="146" alt="Веб-сайты">
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт!</p>
+          <a href="blank.html">Заказать</a>
+        </li>
+        <li>
+          <img src="img/illustration-2.png" width="300" height="146" alt="Приложения">
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений <br>в AppStore и Google Play</p>
+          <a href="blank.html">Заказать</a>
+        </li>
+        <li>
+          <img src="img/illustration-3.png" width="300" height="146" alt="Презентации">
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
+          <a href="blank.html">Заказать</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>О студии</h2>
+      <p>Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
+      <img src="img/nerds-illustration.png" width="300" height="208" alt="Иллюстрация Нёрдс">
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет 
+        <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p>Выполняем заказы на разработку:</p>
+      <ul>
+        <li>Веб-сайтов любой сложности</li>
+        <li>Мобильных приложений для iOS и Android</li>	
+        <li>Слайдшоу и видео для корпоративных презентаций</li>
+      </ul>
+      <p>C 2004 года любим точность во всем:</p>
+      <table>
+        <tr>
+          <td>146%</td>
+          <td>100%</td>
+          <td>50%</td>
+        </tr>
+        <tr>
+          <td>Уровень <br>самоотдачи</td>
+          <td>Соблюдение <br>сроков</td>
+          <td>Минимальная <br>предоплата</td>
+        </tr>
+      </table>
+    </section>
+    <section>
+      <h2>Наши партнёры</h2>
+      <ul>
+        <li>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="logo-1.png" width="199" height="68" alt="Логотип HTML Academy">
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="logo-2.png" width="209" height="90" alt="Логотип Barbershop BORODINSKI">
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="logo-3.png" width="185" height="52" alt="Логотип PINK">
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="logo-4.png" width="173" height="84" alt="Логотип MISHKA">
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+    <img src="img/map-marker.png" width="231" height="190" alt="Мы здесь">
+    <section>
+      <h2>Как нас найти</h2>
+      <h3>Nёrds design studio</h3>
+      <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
+      <p><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+      <button type="button">Напишите нам</button>
+    </section>
+    <section>
+      <h2>Давайте дружить, это выгодно!</h2>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </section>
+  </footer>
+  <section>
+    <h2>Напишите нам</h2>
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label for="feedback-name">Ваше имя:</label>
+        <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
+        <label for="feedback-email">Ваш email:</label>
+        <input id="feedback-email" type="email" name="email" placeholder="email@example.com">
+      </p>
+      <p>
+        <label for="feedback-message">Текст письма:</label>
+        <textarea id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
+      </p>
+      <button type="submit">Отправить</button>
+    </form>
+    <button type="button">Закрыть</button>
+  </section>
   </body>
 </html>
