Верстка внутренней страницы

--- a/index.html
+++ b/index.html
@@ -79,29 +79,33 @@
     </section>
     <section>
       <h2>О студии</h2>
-      <p>Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
-      <img src="img/nerds-illustration.png" width="300" height="208" alt="Иллюстрация Нёрдс">
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет 
-        <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
-      <p>Выполняем заказы на разработку:</p>
-      <ul>
-        <li>Веб-сайтов любой сложности</li>
-        <li>Мобильных приложений для iOS и Android</li>	
-        <li>Слайдшоу и видео для корпоративных презентаций</li>
-      </ul>
-      <p>C 2004 года любим точность во всем:</p>
-      <table>
-        <tr>
-          <td>146%</td>
-          <td>100%</td>
-          <td>50%</td>
-        </tr>
-        <tr>
-          <td>Уровень <br>самоотдачи</td>
-          <td>Соблюдение <br>сроков</td>
-          <td>Минимальная <br>предоплата</td>
-        </tr>
-      </table>
+      <div>
+        <p>Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+          <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p>Выполняем заказы на разработку:</p>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </div>
+      <div>
+        <img src="img/nerds-illustration.png" width="300" height="208" alt="Иллюстрация Нёрдс">
+        <p>C 2004 года любим точность во всем:</p>
+        <table>
+          <tr>
+            <td>146%</td>
+            <td>100%</td>
+            <td>50%</td>
+          </tr>
+          <tr>
+            <td>Уровень <br>самоотдачи</td>
+            <td>Соблюдение <br>сроков</td>
+            <td>Минимальная <br>предоплата</td>
+          </tr>
+        </table>
+      </div>
     </section>
     <section>
       <h2>Наши партнёры</h2>
@@ -130,18 +134,22 @@
     </section>
   </main>
   <footer>
-    <img src="img/map.jpg" width="1440" height="416" alt="Карта">
-    <img src="img/map-marker.png" width="231" height="190" alt="Мы здесь">
     <section>
       <h2>Как нас найти</h2>
+      <div>
+        <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+      </div>
       <h3>Nёrds design studio</h3>
       <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
       <p><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
       <button type="button">Напишите нам</button>
     </section>
     <section>
-      <h2>Давайте дружить, это выгодно!</h2>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+      <h2>Мы в соцсетях</h2>
+      <div>
+        <strong>Давайте дружить, это выгодно!</strong>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </div>
       <ul>
         <li>
           <a href="#">Вконтакте</a>
