--- a/blank.html
+++ b/blank.html
@@ -21,21 +21,25 @@
   </header>
   <main>
     <h1>Дизайн-студия Нёрдс</h1>
-  
+
   </main>
   <footer>
-    <img src="img/map.jpg" width="1440" height="416" alt="Карта">
-    <img src="img/map-marker.png" width="231" height="190" alt="Мы здесь">
     <section>
       <h2>Как нас найти</h2>
+      <div>
+        <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+      </div>
       <h3>Nёrds design studio</h3>
       <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
       <p><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
       <button type="button">Напишите нам</button>
     </section>
     <section>
-      <h2>Давайте дружить, это выгодно!</h2>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+      <h2>Мы в соцсетях</h2>
+      <div>
+        <strong>Давайте дружить, это выгодно!</strong>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </div>
       <ul>
         <li>
           <a href="#">Вконтакте</a>
