--- a/catalog.html
+++ b/catalog.html
@@ -7,13 +7,13 @@
   <body>
   <header>
   <nav>
-    <a>
+    <a href="index.html">
       <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
     </a>
     <ul>
       <li><a href="blank.html">Студия</a></li>
       <li><a href="blank.html">Клиенты</a></li>
-      <li><a href="catalog.html">Магазин</a></li>
+      <li><a href="#">Магазин</a></li>
       <li><a href="blank.html">Контакты</a></li>
     </ul>
     <a href="blank.html">Корзина</a>
@@ -21,21 +21,183 @@
   </header>
   <main>
     <h1>Магазин готовых шаблонов</h1>
- 
+    <section>
+        <h2>Фильтр товаров</h2>
+        <form method="get" action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <legend>Стоимость:</legend>
+            <div>
+              <input type="range" min="1" max="100" value="70" class="slider" id="price">
+            </div>
+            <p>
+              <label for="filter-price-min">От</label>
+              <input id="filter-price-min" type="text" name="price-min" placeholder="0">
+              <label for="filter-price-max">До</label>
+              <input id="filter-price-max" type="text" name="price-max" placeholder="15000">
+            </p>
+          </fieldset>
+          <fieldset>
+            <legend>Сетка:</legend>
+            <ul>
+              <li>
+                <input type="radio" name="grid" id="filter-adaptive" checked>
+                <label for="filter-adaptive">Адаптивная</label>
+              </li>
+              <li>
+                <input type="radio" name="grid" id="filter-fixed">
+                <label for="filter-fixed">Фиксированная</label>
+              </li>
+              <li>
+                <input type="radio" name="grid" id="filter-rubber">
+                <label for="filter-rubber">Резиновая сетка</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Особенности:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="slider" id="filter-slider" checked>
+                <label for="filter-slider">Слайдер</label>
+              </li>
+              <li>
+                <input type="checkbox" name="advantage" id="filter-advantage">
+                <label for="filter-advantage">Блок преимуществ</label>
+              </li>
+              <li>
+                <input type="checkbox" name="news" id="filter-news" checked>
+                <label for="filter-news">Новости</label>
+              </li>
+              <li>
+                <input type="checkbox" name="gallery" id="filter-gallery">
+                <label for="filter-gallery">Галерея</label>
+              </li>
+              <li>
+                <input type="checkbox" name="basket" id="filter-basket">
+                <label for="filter-basket">Корзина</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="submit">Показать</button>
+        </form>
+    </section>
+    <section>
+      <h2>Список готовых шаблонов</h2>
+      <form method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend>Сортировать:</legend>
+          <input id="sort-price" type="radio" name="sort" checked>
+          <label for="sort-price">По цене</label>
+          <input id="sort-type" type="radio" name="sort">
+          <label for="sort-type">По типу</label>
+          <input id="sort-name" type="radio" name="sort">
+          <label for="sort-name">По названию</label>
+        </fieldset>
+      </form>
+      <form>
+        <fieldset>
+          <input id="sort-descending" type="radio" name="sort" checked>
+          <label for="sort-descending">По убыванию</label>
+          <input id="sort-ascending" type="radio" name="sort">
+          <label for="sort-ascending">По возрастанию</label>
+        </fieldset>
+      </form>
+      <ul>
+        <li>
+          <a href="blank.html">
+            <h3>Sedona</h3>
+            <p>
+              <img src="img/img-sedona.jpg" width="359" height="578" alt="Готовый шаблон «SEDONA»">
+            </p>
+          </a>
+          <p>Информационный сайт для туристов</p>
+          <button type="button">9 900 &#8381;</button>
+        </li>
+        <li>
+          <a href="blank.html">
+            <h3>Pink App</h3>
+            <p>
+              <img src="img/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
+            </p>
+          </a>
+          <p>Продуктовый лендинг <br>приложения для iOS и Android</p>
+          <button type="button">9 900 &#8381;</button>
+        </li>
+        <li>
+          <a href="blank.html">
+            <h3>Barbershop</h3>
+            <p>
+              <img src="img/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
+            </p>
+          </a>
+          <p>Сайт салона красоты. <br>Для мужчин, да.</p>
+          <button type="button">9 900 &#8381;</button>
+        </li>
+        <li>
+          <a href="blank.html">
+            <h3>Mishka</h3>
+            <p>
+              <img src="img/img-mishka.jpg" width="358" height="578" alt="Готовый шаблон «MISHKA»">
+            </p>
+          </a>
+          <p>Интернет-магазин <br>вязаных игрушек</p>
+          <button type="button">9 900 &#8381;</button>
+        </li>
+        <li>
+          <a href="blank.html">
+            <h3>Mishka</h3>
+            <p>
+              <img src="img/img-aplus.jpg" width="359" height="578" alt="Готовый шаблон «A PLUS»">
+            </p>
+          </a>
+          <p>Лендинг курсов повышения <br>квалификации</p>
+          <button type="button">9 900 &#8381;</button>
+        </li>
+        <li>
+          <a href="blank.html">
+            <h3>КВАСТ</h3>
+            <p>
+              <img src="img/img-kvast.jpg" width="359" height="578" alt="Готовый шаблон «КВАСТ»">
+            </p>
+          </a>
+          <p>Промо-сайт производителя <br>крафтового кваса</p>
+          <button type="button">9 900 &#8381;</button>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a>1</a>
+        </li>
+        <li>
+          <a href="#">2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">Следующая</a>
+        </li>
+      </ul>
+    </section>
+
   </main>
   <footer>
-    <img src="img/map.jpg" width="1440" height="416" alt="Карта">
-    <img src="img/map-marker.png" width="231" height="190" alt="Мы здесь">
     <section>
       <h2>Как нас найти</h2>
+      <div>
+        <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+      </div>
       <h3>Nёrds design studio</h3>
       <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
       <p><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
       <button type="button">Напишите нам</button>
     </section>
     <section>
-      <h2>Давайте дружить, это выгодно!</h2>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+      <h2>Мы в соцсетях</h2>
+      <div>
+        <strong>Давайте дружить, это выгодно!</strong>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </div>
       <ul>
         <li>
           <a href="#">Вконтакте</a>
