--- a/blank.html
+++ b/blank.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
   <header>
@@ -27,7 +31,7 @@
     <section>
       <h2>Как нас найти</h2>
       <div>
-        <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+        <img src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
       </div>
       <h3>Nёrds design studio</h3>
       <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
@@ -42,13 +46,13 @@
       </div>
       <ul>
         <li>
-          <a href="#">Вконтакте</a>
+          <a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
         <li>
-          <a href="#">Фейсбук</a>
+          <a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
         </li>
         <li>
-          <a href="#">Инстаграм</a>
+          <a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
         </li>
       </ul>
     </section>
