--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
   <header>
@@ -83,88 +87,79 @@
     </section>
     <section>
       <h2>Список готовых шаблонов</h2>
-      <form method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
-          <legend>Сортировать:</legend>
-          <input id="sort-price" type="radio" name="sort" checked>
-          <label for="sort-price">По цене</label>
-          <input id="sort-type" type="radio" name="sort">
-          <label for="sort-type">По типу</label>
-          <input id="sort-name" type="radio" name="sort">
-          <label for="sort-name">По названию</label>
-        </fieldset>
-      </form>
-      <form>
-        <fieldset>
-          <input id="sort-descending" type="radio" name="sort" checked>
-          <label for="sort-descending">По убыванию</label>
-          <input id="sort-ascending" type="radio" name="sort">
-          <label for="sort-ascending">По возрастанию</label>
-        </fieldset>
-      </form>
+      <p>Сортировать:</p>
+      <ul>
+        <li><a href="">По цене</a></li>
+        <li><a href="">По типу</a></li>
+        <li><a href="">По названию</a></li>
+      </ul>
+      <ul>
+        <li><a href="">По убыванию</a></li>
+        <li><a href="">По возрастанию</a></li>
+      </ul>
       <ul>
         <li>
           <a href="blank.html">
             <h3>Sedona</h3>
             <p>
-              <img src="img/img-sedona.jpg" width="359" height="578" alt="Готовый шаблон «SEDONA»">
+              <img src="img/products/img-sedona.jpg" width="359" height="578" alt="Готовый шаблон «SEDONA»">
             </p>
           </a>
           <p>Информационный сайт для туристов</p>
-          <button type="button">9 900 &#8381;</button>
+          <a href="">9 900 &#8381;</a>
         </li>
         <li>
           <a href="blank.html">
             <h3>Pink App</h3>
             <p>
-              <img src="img/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
+              <img src="img/products/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
             </p>
           </a>
           <p>Продуктовый лендинг <br>приложения для iOS и Android</p>
-          <button type="button">9 900 &#8381;</button>
+          <a href="">9 900 &#8381;</a>
         </li>
         <li>
           <a href="blank.html">
             <h3>Barbershop</h3>
             <p>
-              <img src="img/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
+              <img src="img/products/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
             </p>
           </a>
           <p>Сайт салона красоты. <br>Для мужчин, да.</p>
-          <button type="button">9 900 &#8381;</button>
+          <a href="">9 900 &#8381;</a>
         </li>
         <li>
           <a href="blank.html">
             <h3>Mishka</h3>
             <p>
-              <img src="img/img-mishka.jpg" width="358" height="578" alt="Готовый шаблон «MISHKA»">
+              <img src="img/products/img-mishka.jpg" width="359" height="578" alt="Готовый шаблон «MISHKA»">
             </p>
           </a>
           <p>Интернет-магазин <br>вязаных игрушек</p>
-          <button type="button">9 900 &#8381;</button>
+          <a href="">9 900 &#8381;</a>
         </li>
         <li>
           <a href="blank.html">
             <h3>Mishka</h3>
             <p>
-              <img src="img/img-aplus.jpg" width="359" height="578" alt="Готовый шаблон «A PLUS»">
+              <img src="img/products/img-aplus.jpg" width="359" height="578" alt="Готовый шаблон «A PLUS»">
             </p>
           </a>
           <p>Лендинг курсов повышения <br>квалификации</p>
-          <button type="button">9 900 &#8381;</button>
+          <a href="">9 900 &#8381;</a>
         </li>
         <li>
           <a href="blank.html">
             <h3>КВАСТ</h3>
             <p>
-              <img src="img/img-kvast.jpg" width="359" height="578" alt="Готовый шаблон «КВАСТ»">
+              <img src="img/products/img-kvast.jpg" width="359" height="578" alt="Готовый шаблон «КВАСТ»">
             </p>
           </a>
           <p>Промо-сайт производителя <br>крафтового кваса</p>
-          <button type="button">9 900 &#8381;</button>
+          <a href="">9 900 &#8381;</a>
         </li>
       </ul>
-      <ul>
+      <ol>
         <li>
           <a>1</a>
         </li>
@@ -177,15 +172,14 @@
         <li>
           <a href="#">Следующая</a>
         </li>
-      </ul>
+      </ol>
     </section>
-
   </main>
   <footer>
     <section>
       <h2>Как нас найти</h2>
       <div>
-        <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+        <img src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
       </div>
       <h3>Nёrds design studio</h3>
       <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
@@ -200,13 +194,13 @@
       </div>
       <ul>
         <li>
-          <a href="#">Вконтакте</a>
+          <a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
         <li>
-          <a href="#">Фейсбук</a>
+          <a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
         </li>
         <li>
-          <a href="#">Инстаграм</a>
+          <a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
         </li>
       </ul>
     </section>
