--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
   <header>
@@ -30,27 +34,27 @@
           <a href="blank.html">Узнать больше</a>
         </div>
         <div>
-          <img src="img/nerds-index-slide1.png" width="760" height="431" alt="Слайд 1">
+          <img src="img/slider/nerds-index-slide1.jpg" width="760" height="431" alt="Слайд 1">
         </div>
       </div>
       <div>
         <div>
-          <p>Долго, дорого, <br>скрупулезно.</p>
-          <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+          <p>Любим математику <br>как никто другой</p>
+          <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций</p>
           <a href="blank.html">Узнать больше</a>
         </div>
         <div>
-          <img src="img/nerds-index-slide2.png" width="760" height="431" alt="Слайд 2">
+          <img src="img/slider/nerds-index-slide2.jpg" width="760" height="431" alt="Слайд 2">
         </div>
       </div>
       <div>
         <div>
-          <p>Долго, дорого, <br>скрупулезно.</p>
-          <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+          <p>Только ночь, <br>только хардкор</p>
+          <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
           <a href="blank.html">Узнать больше</a>
         </div>
         <div>
-          <img src="img/nerds-index-slide3.png" width="760" height="431" alt="Слайд 3">
+          <img src="img/slider/nerds-index-slide3.jpg" width="760" height="431" alt="Слайд 3">
         </div>
       </div>
     </section>
@@ -58,19 +62,19 @@
       <h2>Наши услуги</h2>
       <ul>
         <li>
-          <img src="img/illustration-1.png" width="300" height="146" alt="Веб-сайты">
+          <img src="img/services/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт!</p>
           <a href="blank.html">Заказать</a>
         </li>
         <li>
-          <img src="img/illustration-2.png" width="300" height="146" alt="Приложения">
+          <img src="img/services/illustration-2.jpg" width="300" height="146" alt="Приложения">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений <br>в AppStore и Google Play</p>
           <a href="blank.html">Заказать</a>
         </li>
         <li>
-          <img src="img/illustration-3.png" width="300" height="146" alt="Презентации">
+          <img src="img/services/illustration-3.jpg" width="300" height="146" alt="Презентации">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
           <a href="blank.html">Заказать</a>
@@ -91,7 +95,8 @@
         </ul>
       </div>
       <div>
-        <img src="img/nerds-illustration.png" width="300" height="208" alt="Иллюстрация Нёрдс">
+        <img src="img/nerds-illustration.jpg" width="360" height="208"
+        alt="Логотип Нёрдс на фоне разноцветных кругов и линий разных размеров">
         <p>C 2004 года любим точность во всем:</p>
         <table>
           <tr>
@@ -112,22 +117,22 @@
       <ul>
         <li>
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="logo-1.png" width="199" height="68" alt="Логотип HTML Academy">
+            <img src="img/partners/html-academy-logo.svg" width="199" height="68" alt="Логотип HTML Academy">
           </a>
         </li>
         <li>
           <a href="blank.html">
-            <img src="logo-2.png" width="209" height="90" alt="Логотип Barbershop BORODINSKI">
+            <img src="img/partners/barbershop-logo.jpg" width="209" height="90" alt="Логотип Barbershop BORODINSKI">
           </a>
         </li>
         <li>
           <a href="blank.html">
-            <img src="logo-3.png" width="185" height="52" alt="Логотип PINK">
+            <img src="img/partners/pink-logo.jpg" width="185" height="52" alt="Логотип PINK">
           </a>
         </li>
         <li>
           <a href="blank.html">
-            <img src="logo-4.png" width="173" height="84" alt="Логотип MISHKA">
+            <img src="img/partners/mishka-logo.jpg" width="173" height="84" alt="Логотип MISHKA">
           </a>
         </li>
       </ul>
@@ -137,7 +142,7 @@
     <section>
       <h2>Как нас найти</h2>
       <div>
-        <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+        <img src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
       </div>
       <h3>Nёrds design studio</h3>
       <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
@@ -152,13 +157,13 @@
       </div>
       <ul>
         <li>
-          <a href="#">Вконтакте</a>
+          <a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
         <li>
-          <a href="#">Фейсбук</a>
+          <a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
         </li>
         <li>
-          <a href="#">Инстаграм</a>
+          <a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
         </li>
       </ul>
     </section>
