--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия Нёрдс</title>
@@ -7,102 +7,105 @@
     <link rel="icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple.png">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-  <header>
-  <nav>
-    <a>
+  <body class="page-body">
+  <header class="main-header">
+  <nav class="main-navigation">
+    <a class="main-header-logo">
       <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
     </a>
-    <ul>
+    <ul class="site-navigation">
       <li><a href="blank.html">Студия</a></li>
       <li><a href="blank.html">Клиенты</a></li>
       <li><a href="catalog.html">Магазин</a></li>
       <li><a href="blank.html">Контакты</a></li>
     </ul>
-    <a href="blank.html">Корзина</a>
+    <a class="cart-link" href="blank.html">Корзина</a>
   </nav>
   </header>
-  <main>
+  <main class="container">
     <h1>Дизайн-студия Нёрдс</h1>
-    <section>
+    <section class="slider">
       <h2>Карусель слайдов</h2>
-      <div>
-        <div>
-          <p>Долго, дорого, <br>скрупулезно.</p>
+      <div class="slider-box">
+        <div class="slider-box-left">
+          <p class="slider-box-header">Долго, дорого, <br>скрупулезно.</p>
           <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
-          <a href="blank.html">Узнать больше</a>
+          <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
         </div>
-        <div>
+        <div class="slider-box-right">
           <img src="img/slider/nerds-index-slide1.jpg" width="760" height="431" alt="Слайд 1">
         </div>
       </div>
-      <div>
-        <div>
-          <p>Любим математику <br>как никто другой</p>
+      <div class="slider-box">
+        <div class="slider-box-left">
+          <p class="slider-box-header">Любим математику <br>как никто другой</p>
           <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций</p>
-          <a href="blank.html">Узнать больше</a>
+          <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
         </div>
-        <div>
+        <div class="slider-box-right">
           <img src="img/slider/nerds-index-slide2.jpg" width="760" height="431" alt="Слайд 2">
         </div>
       </div>
-      <div>
-        <div>
-          <p>Только ночь, <br>только хардкор</p>
+      <div class="slider-box">
+        <div class="slider-box-left">
+          <p class="slider-box-header">Только ночь, <br>только хардкор</p>
           <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
-          <a href="blank.html">Узнать больше</a>
+          <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
         </div>
-        <div>
+        <div class="slider-box-right">
           <img src="img/slider/nerds-index-slide3.jpg" width="760" height="431" alt="Слайд 3">
         </div>
       </div>
     </section>
-    <section>
+    <section class="services">
       <h2>Наши услуги</h2>
-      <ul>
-        <li>
+      <ul class="services-list">
+        <li class="services-item">
           <img src="img/services/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт!</p>
-          <a href="blank.html">Заказать</a>
+          <a class="button services-button-sites" href="blank.html"><span>Заказать</span></a>
         </li>
-        <li>
+        <li class="services-item">
           <img src="img/services/illustration-2.jpg" width="300" height="146" alt="Приложения">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений <br>в AppStore и Google Play</p>
-          <a href="blank.html">Заказать</a>
+          <a class="button services-button-apps" href="blank.html"><span>Заказать</span></a>
         </li>
-        <li>
+        <li class="services-item">
           <img src="img/services/illustration-3.jpg" width="300" height="146" alt="Презентации">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
-          <a href="blank.html">Заказать</a>
+          <a class="button services-button-presentations" href="blank.html"><span>Заказать</span></a>
         </li>
       </ul>
     </section>
-    <section>
+    <section class="about">
       <h2>О студии</h2>
-      <div>
-        <p>Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
+      <div class="about-box-left">
+        <p class="about-title">Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
           <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <p>Выполняем заказы на разработку:</p>
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        <p class="about-info">Выполняем заказы на разработку:</p>
+        <ul class="about-list">
+          <li class="about-item">Веб-сайтов любой сложности</li>
+          <li class="about-item">Мобильных приложений для iOS и Android</li>
+          <li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
-      <div>
+      <div class="about-box-right">
         <img src="img/nerds-illustration.jpg" width="360" height="208"
         alt="Логотип Нёрдс на фоне разноцветных кругов и линий разных размеров">
-        <p>C 2004 года любим точность во всем:</p>
-        <table>
-          <tr>
-            <td>146%</td>
-            <td>100%</td>
-            <td>50%</td>
+        <p class="about-data">C 2004 года любим точность во всем:</p>
+        <table class="about-data-table">
+          <tr class="about-table-row-one">
+            <td>146<sup>%</sup></td>
+            <td>100<sup>%</sup></td>
+            <td>50<sup>%</sup></td>
           </tr>
           <tr>
             <td>Уровень <br>самоотдачи</td>
@@ -112,25 +115,25 @@
         </table>
       </div>
     </section>
-    <section>
+    <section class="partners">
       <h2>Наши партнёры</h2>
-      <ul>
-        <li>
+      <ul class="partners-list">
+        <li class="partners-item">
           <a href="https://htmlacademy.ru/intensive/htmlcss">
             <img src="img/partners/html-academy-logo.svg" width="199" height="68" alt="Логотип HTML Academy">
           </a>
         </li>
-        <li>
+        <li class="partners-item">
           <a href="blank.html">
             <img src="img/partners/barbershop-logo.jpg" width="209" height="90" alt="Логотип Barbershop BORODINSKI">
           </a>
         </li>
-        <li>
+        <li class="partners-item">
           <a href="blank.html">
             <img src="img/partners/pink-logo.jpg" width="185" height="52" alt="Логотип PINK">
           </a>
         </li>
-        <li>
+        <li class="partners-item">
           <a href="blank.html">
             <img src="img/partners/mishka-logo.jpg" width="173" height="84" alt="Логотип MISHKA">
           </a>
@@ -138,52 +141,54 @@
       </ul>
     </section>
   </main>
-  <footer>
-    <section>
+  <footer class="main-footer">
+    <section class="footer-contacts">
       <h2>Как нас найти</h2>
       <div>
-        <img src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
+        <img class="footer-map" src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
       </div>
-      <h3>Nёrds design studio</h3>
-      <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
-      <p><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-      <button type="button">Напишите нам</button>
+      <div class="footer-contacts-box">
+        <h3>Nёrds design studio</h3>
+        <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
+        <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+        <button class="button footer-button" type="button">Напишите нам</button>
+      </div>
     </section>
-    <section>
+    <section class="footer-social">
       <h2>Мы в соцсетях</h2>
-      <div>
+      <div class="footer-social-box">
         <strong>Давайте дружить, это выгодно!</strong>
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </div>
       <ul>
         <li>
-          <a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+          <a class="social-button" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
         <li>
-          <a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
+          <a class="social-button" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
         </li>
         <li>
-          <a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
+          <a class="social-button" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
         </li>
       </ul>
     </section>
   </footer>
-  <section>
+  <section class="modal-feedback">
     <h2>Напишите нам</h2>
     <form action="https://echo.htmlacademy.ru" method="post">
-      <p>
+      <p class="modal-part-one">
         <label for="feedback-name">Ваше имя:</label>
         <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
         <label for="feedback-email">Ваш email:</label>
         <input id="feedback-email" type="email" name="email" placeholder="email@example.com">
       </p>
-      <p>
+      <p class="modal-part-two">
         <label for="feedback-message">Текст письма:</label>
         <textarea id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
       </p>
-      <button type="submit">Отправить</button>
+      <button class="button button-feedback" type="submit">Отправить</button>
     </form>
-    <button type="button">Закрыть</button>
+    <button class="button button-close" type="button">Закрыть</button>
   </section>
   </body>
 </html>
