--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body class="page-body">
+  <body class="page-body inner-page">
   <header class="main-header">
   <nav class="main-navigation">
     <a class="main-header-logo" href="index.html">
@@ -23,16 +23,23 @@
       <li><a href="catalog.html">Магазин</a></li>
       <li><a href="blank.html">Контакты</a></li>
     </ul>
-    <a class="cart-link" href="blank.html">Корзина</a>
+    <a class="cart-link" href="blank.html">
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
+        <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
+        <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
+      </svg>
+      <span>Корзина</span>
+    </a>
   </nav>
   </header>
-  <main>
-    <h1>Магазин готовых шаблонов</h1>
-    <section>
+  <main class="page-catalog container">
+    <h1 class="page-title">Магазин готовых шаблонов</h1>
+    <section class="filters">
         <h2>Фильтр товаров</h2>
-        <form method="get" action="https://echo.htmlacademy.ru">
-          <fieldset>
-            <legend>Стоимость:</legend>
+        <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+          <fieldset class="filter-price">
+            <legend class="filter-type">Стоимость:</legend>
             <div>
               <input type="range" min="1" max="100" value="70" class="slider" id="price">
             </div>
@@ -43,187 +50,190 @@
               <input id="filter-price-max" type="text" name="price-max" placeholder="15000">
             </p>
           </fieldset>
-          <fieldset>
-            <legend>Сетка:</legend>
-            <ul>
+          <fieldset class="filter-grids">
+            <legend class="filter-type">Сетка:</legend>
+            <ul class="filter-grids-list">
               <li>
-                <input type="radio" name="grid" id="filter-adaptive" checked>
+                <input class="filter-input-radio" type="radio" name="grid" id="filter-adaptive" checked>
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
               <li>
-                <input type="radio" name="grid" id="filter-fixed">
+                <input class="filter-input-radio" type="radio" name="grid" id="filter-fixed">
                 <label for="filter-fixed">Фиксированная</label>
               </li>
               <li>
-                <input type="radio" name="grid" id="filter-rubber">
+                <input class="filter-input-radio" type="radio" name="grid" id="filter-rubber">
                 <label for="filter-rubber">Резиновая сетка</label>
               </li>
             </ul>
           </fieldset>
           <fieldset>
-            <legend>Особенности:</legend>
+            <legend class="filter-type">Особенности:</legend>
             <ul>
-              <li>
-                <input type="checkbox" name="slider" id="filter-slider" checked>
+              <li class="filter-option filter-checkbox">
+                <input class="filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider" checked>
                 <label for="filter-slider">Слайдер</label>
               </li>
-              <li>
-                <input type="checkbox" name="advantage" id="filter-advantage">
+              <li class="filter-option filter-checkbox">
+                <input class="filter-input-checkbox filter-input" type="checkbox" name="advantage" id="filter-advantage">
                 <label for="filter-advantage">Блок преимуществ</label>
               </li>
-              <li>
-                <input type="checkbox" name="news" id="filter-news" checked>
+              <li class="filter-option filter-checkbox">
+                <input class="filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
                 <label for="filter-news">Новости</label>
               </li>
-              <li>
-                <input type="checkbox" name="gallery" id="filter-gallery">
+              <li class="filter-option filter-checkbox">
+                <input class="filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
                 <label for="filter-gallery">Галерея</label>
               </li>
-              <li>
-                <input type="checkbox" name="basket" id="filter-basket">
+              <li class="filter-option filter-checkbox">
+                <input class="filter-input-checkbox filter-input" type="checkbox" name="basket" id="filter-basket">
                 <label for="filter-basket">Корзина</label>
               </li>
             </ul>
           </fieldset>
-          <button type="submit">Показать</button>
+          <button class="button filter-button" type="submit"><span>Показать</span></button>
         </form>
     </section>
-    <section>
+    <section class="catalog">
       <h2>Список готовых шаблонов</h2>
-      <p>Сортировать:</p>
-      <ul>
-        <li><a href="">По цене</a></li>
+      <p class="filter-type">Сортировать:</p>
+      <ul class="catalog-filter-one">
+        <li><a class="filter-one-current" href="">По цене</a></li>
         <li><a href="">По типу</a></li>
         <li><a href="">По названию</a></li>
       </ul>
-      <ul>
-        <li><a href="">По убыванию</a></li>
+      <ul class="catalog-filter-two">
+        <li><a class="filter-two-current" href="">По убыванию</a></li>
         <li><a href="">По возрастанию</a></li>
       </ul>
-      <ul>
-        <li>
+      <ul class="catalog-list">
+      <li class="catalog-item">
           <a href="blank.html">
-            <h3>Sedona</h3>
-            <p>
+            <p class="catalog-item-image">
               <img src="img/products/img-sedona.jpg" width="359" height="578" alt="Готовый шаблон «SEDONA»">
             </p>
+            <h3 class="catalog-item-title">Sedona</h3>
           </a>
-          <p>Информационный сайт для туристов</p>
-          <a href="">9 900 &#8381;</a>
+          <p class="catalog-description">Информационный сайт <br>для туристов</p>
+          <a class="button button-price" href="">9 900 &#8381;</a>
         </li>
-        <li>
+        <li class="catalog-item">
           <a href="blank.html">
-            <h3>Pink App</h3>
-            <p>
+            <p class="catalog-item-image">
               <img src="img/products/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
             </p>
+            <h3 class="catalog-item-title">Pink App</h3>
           </a>
-          <p>Продуктовый лендинг <br>приложения для iOS и Android</p>
-          <a href="">9 900 &#8381;</a>
+          <p class="catalog-description">Продуктовый лендинг <br>приложения для iOS и Android</p>
+          <a class="button button-price" href="">9 900 &#8381;</a>
         </li>
-        <li>
+        <li class="catalog-item">
           <a href="blank.html">
-            <h3>Barbershop</h3>
-            <p>
+            <p class="catalog-item-image">
               <img src="img/products/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
             </p>
+            <h3 class="catalog-item-title">Barbershop</h3>
           </a>
-          <p>Сайт салона красоты. <br>Для мужчин, да.</p>
-          <a href="">9 900 &#8381;</a>
+          <p class="catalog-description">Сайт салона красоты. <br>Для мужчин, да.</p>
+          <a class="button button-price" href="">9 900 &#8381;</a>
         </li>
-        <li>
+        <li class="catalog-item">
           <a href="blank.html">
-            <h3>Mishka</h3>
-            <p>
+            <p class="catalog-item-image">
               <img src="img/products/img-mishka.jpg" width="359" height="578" alt="Готовый шаблон «MISHKA»">
             </p>
+            <h3 class="catalog-item-title">Mishka</h3>
           </a>
-          <p>Интернет-магазин <br>вязаных игрушек</p>
-          <a href="">9 900 &#8381;</a>
+          <p class="catalog-description">Интернет-магазин <br>вязаных игрушек</p>
+          <a class="button button-price" href="">9 900 &#8381;</a>
         </li>
-        <li>
+        <li class="catalog-item">
           <a href="blank.html">
-            <h3>Mishka</h3>
-            <p>
+            <p class="catalog-item-image">
               <img src="img/products/img-aplus.jpg" width="359" height="578" alt="Готовый шаблон «A PLUS»">
             </p>
+            <h3 class="catalog-item-title">A plus</h3>
           </a>
-          <p>Лендинг курсов повышения <br>квалификации</p>
-          <a href="">9 900 &#8381;</a>
+          <p class="catalog-description">Лендинг курсов повышения <br>квалификации</p>
+          <a class="button button-price" href="">9 900 &#8381;</a>
         </li>
-        <li>
+        <li class="catalog-item">
           <a href="blank.html">
-            <h3>КВАСТ</h3>
-            <p>
+            <p class="catalog-item-image">
               <img src="img/products/img-kvast.jpg" width="359" height="578" alt="Готовый шаблон «КВАСТ»">
             </p>
+            <h3 class="catalog-item-title">КВАСТ</h3>
           </a>
-          <p>Промо-сайт производителя <br>крафтового кваса</p>
-          <a href="">9 900 &#8381;</a>
+          <p class="catalog-description">Промо-сайт производителя <br>крафтового кваса</p>
+          <a class="button button-price" href="">9 900 &#8381;</a>
         </li>
       </ul>
-      <ol>
-        <li>
-          <a>1</a>
+      <ol class="pagination-list">
+        <li class="pagination-item pagination-item-current">
+          <a><span>1</span></a>
         </li>
-        <li>
-          <a href="#">2</a>
+        <li class="pagination-item">
+          <a href="#"><span>2</span></a>
         </li>
-        <li>
-          <a href="#">3</a>
+        <li class="pagination-item">
+          <a href="#"><span>3</span></a>
         </li>
-        <li>
-          <a href="#">Следующая</a>
+        <li class="pagination-item">
+          <a href="#"><span>Следующая</span></a>
         </li>
       </ol>
     </section>
   </main>
-  <footer>
-    <section>
+  <footer class="main-footer">
+    <section class="footer-contacts">
       <h2>Как нас найти</h2>
       <div>
-        <img src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
+        <img class="footer-map" src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
       </div>
-      <h3>Nёrds design studio</h3>
-      <p><a href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
-      <p><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-      <button type="button">Напишите нам</button>
+      <div class="footer-contacts-box">
+        <h3>Nёrds design studio</h3>
+        <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
+        <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+        <button class="button footer-button" type="button">Напишите нам</button>
+      </div>
     </section>
-    <section>
+    <section class="footer-social">
       <h2>Мы в соцсетях</h2>
-      <div>
+      <div class="footer-social-box">
         <strong>Давайте дружить, это выгодно!</strong>
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </div>
       <ul>
         <li>
-          <a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+          <a class="social-button" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
         <li>
-          <a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
+          <a class="social-button" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
         </li>
         <li>
-          <a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
+          <a class="social-button" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
         </li>
       </ul>
     </section>
   </footer>
-  <section>
+  <section class="modal-feedback">
     <h2>Напишите нам</h2>
     <form action="https://echo.htmlacademy.ru" method="post">
-      <p>
+      <p class="modal-part-one">
         <label for="feedback-name">Ваше имя:</label>
         <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
         <label for="feedback-email">Ваш email:</label>
         <input id="feedback-email" type="email" name="email" placeholder="email@example.com">
       </p>
-      <p>
+      <p class="modal-part-two">
         <label for="feedback-message">Текст письма:</label>
         <textarea id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
       </p>
-      <button type="submit">Отправить</button>
+      <button class="button button-feedback" type="submit">Отправить</button>
     </form>
-    <button type="button">Закрыть</button>
+    <button class="button button-close" type="button">Закрыть</button>
   </section>
   </body>
 </html>
+
